# agentic-ai-

1st agent/: README.md  pyproject.toml
1st agent/src/explore_uv/: agent.py  agent_runner.py
explore-uv/explore-uv/uv_project_2/: agents.py
repo/01-uv/uv_project_1/src/explore_uv/: __init__.py
repo/02-openrouter/explore-uv/: pyproject.toml
repo/02-openrouter/explore-uv/src/explore_uv/: main.py
repo/03-litellmoopeai/explore-uv/: pyproject.toml
repo/03-litellmoopeai/explore-uv/src/explore_uv/: mai.py
repo/03-litellmoopeai/litellm/: pyproject.toml
repo/03-litellmoopeai/litellm/src/litellm/: main.py
repo/04-hello_agent/agent run and global level/explore-uv/: README.md
repo/04-hello_agent/agent run and global level/explore-uv/hello_agent/: main.py
repo/04-hello_agent/agent run and global level/explore-uv/src/explore_uv/: agent.py  gloal.py
repo/04-hello_agent/sync/explore-uv/src/explore_uv/: main.py
repo/05_chainlit/: chainlit.yaml  chatbot.py  pyproject.toml
repo/05_chainlit/frontend/: style.css
repo/hello_agent/agent run and global level/explore-uv/: pyproject.toml
repo/hello_agent/agent run and global level/explore-uv/hello_agent/: operouter.py
repo/hello_agent/async/explore-uv/: pyproject.toml
repo/hello_agent/async/explore-uv/src/explore_uv/: main.py
repo/hello_agent/sync/explore-uv/: pyproject.toml
repo/uv/uv_project_1/src/explore_uv/: hello.py
