[project]
name = "explore-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ayman Rehman", email = "aimanshahzad295@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.40.2",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "nest-asyncio>=1.6.0",
    "openai-agents[litellm]>=0.0.16",
]

[project.scripts]
explore-uv = "explore_uv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
