[project]
name = "litellm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ayman Rehman", email = "aimanshahzad295@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.0.16",
]

[project.scripts]
litellm = "litellm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "litellm",
]

[tool.uv.sources]
litellm = { workspace = true }
